# STM32L4R5Z_Nucleo

./: .clang-format  .cproject  .mxproject  .project  CMakeCache.txt  CMakeLists.txt  README.md  STM32L4R5ZITXP_FLASH.ld  STM32L4R5ZITXP_RAM.ld  STM32L4R5Z_Nucleo.ioc  STM32L4R5Z_Nucleo.launch
Application/ap/: ap.c  ap.h  ap_def.h
Application/ap/module/: module.c  module.h
Application/ap/module/cli/: cli.c
Application/ap/module/hello_world/: hello_world.c
Application/ap/module/system/: system.c  system.h
Application/bsp/: bsp.c  bsp.h
Application/common/: def.h  err_code.h  evt_code.h
Application/common/core/: qbuffer.c
Application/hw/: hw.c  hw.h  hw_def.h
Application/hw/deviceDriver/inc/: bh1750.h  bno055.h  led.h
Application/hw/deviceDriver/src/: bh1750.c  bno055.c  led.c
Application/hw/moduleDriver/inc/: cli.h  cli_gui.h  fault.h
Application/hw/moduleDriver/src/: cli.c  log.c  reset.c
Application/mw/: mw.c  mw.h  mw_def.h
Application/mw/inc/: fatfs.h  ffconf.h  rtos.h  sd_diskio.h  thread.h
Application/mw/src/: cpu_utils.c  fatfs.c  rtos.c  sd_diskio.c  thread.c
Core/Inc/: FreeRTOSConfig.h  adc.h  i2c.h  main.h  rtc.h  sdmmc.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h  usart.h
Core/Src/: adc.c  can.c  gpio.c  i2c.c  main.c  rng.c  rtc.c  sdmmc.c  spi.c  stm32l4xx_it.c  tim.c  usart.c  usb_otg.c
prj/vscode/: stm32l4r5z_nucleo.code-workspace
